frame/support/test/tests/pallet_ui/attr_non_empty.rs
#[frame_support::pallet [foo]]
mod foo {
}

fn main() {
}
